Bug 98913 - Autocomplete multi-line text ignores new line white spaces when filling cell value
Summary: Autocomplete multi-line text ignores new line white spaces when filling cell ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.5.2 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2016-03-26 20:54 UTC by teo8976
Modified: 2026-05-26 08:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
98913 - test 25.8.3.2 win-10x64 - steve.contrib@gmail.com (8.21 KB, image/png)
2025-12-14 17:59 UTC, steve.contrib@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description teo8976 2016-03-26 20:54:25 UTC
Steps to reproduce:

1. In a cell, type a multiline text like:
foo
bar

2. In another cell, start typing: "fo"

Expected results:
EITHER no autocomplete at all
OR autocomplete suggests me the content of the existing cell (no matter how it is visualized) and if I hit enter, the new cell is filled with the same content as the existing one

Observed result:
Autocomplete shows "foo bar", and if I hit enter, the text "foo bar" is entered into the new cell, in a single line.
In other words, it is autocompleting with content that has never been entered in any other cell.
Comment 1 V Stuart Foote 2016-03-26 22:12:09 UTC
Confirming

On Windows 10 Pro 64-bit en-US with
Version: 5.1.2.1 (x64)
Build ID: 2603b69c5ec5981bb5f053f8ebfd1f3de00a4c29
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
Locale: en-US (en_US)

But, isn't this just the string rules for matching the auto fill simply ignoring the new line white space on the replacement?

Don't really see the lack of formatting as an issue. But checking on MS Excel 2007 and the line breaks are picked up for the replacement.
Comment 2 teo8976 2016-03-26 22:56:30 UTC
> Don't really see the lack of formatting as an issue. 

How can that not be an issue??
If it was just the way the autocompleted text is displayed while you type, that wouldn't be an issue, but the de-formatted text (that is the string with the newlines replaced with spaces) is actually inserted into the cell when you hit Enter or Tab.

The whole point of autocomplete is that you get to fill a cell with the same text that you had previously entered in some other cell without having to retype it. If you have to edit the cell and go through the text to re-do the formatting (that is insert newlines and delete spaces), what's the point? You may as well go look for the original cell and copy-paste it.
Comment 3 QA Administrators 2017-10-23 14:12:22 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2019-12-03 14:59:40 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2021-12-03 04:45:47 UTC Comment hidden (obsolete)
Comment 6 teo8976 2021-12-03 09:39:01 UTC
Yep, issue still present.

Version: 7.2.3.1 / LibreOffice Community
Build ID: 20(Build:1)
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: an-ES (an_ES.UTF-8); UI: en-US
Calc: threaded
Comment 7 QA Administrators 2023-12-14 03:14:19 UTC Comment hidden (noise)
Comment 8 QA Administrators 2025-12-14 03:13:19 UTC Comment hidden (noise)
Comment 9 teo8976 2025-12-14 16:03:28 UTC
Yep, still an issue. Soon it will be 10 years. Pathetic.

> To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is 
> asking bug reporters and confirmers to retest open, confirmed bugs which have not been 
> touched for over a year.

This is stupid. It should work the other way around: if you think an old issue might have been fixed, you test it, and if it's fixed then close it.
Comment 10 steve.contrib@gmail.com 2025-12-14 17:59:45 UTC
Created attachment 204636 [details]
98913 - test 25.8.3.2 win-10x64 - steve.contrib@gmail.com

up
still repro in 

Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_CH); UI: en-US
Calc: CL threaded

+ on the screenshot there is an issue with the first letter is capitalized when the text is enter in multilign
Comment 11 Commit Notification 2026-05-26 08:04:00 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c1499ef3238c91dad43f1a15313dea945b49ca24

tdf#98913 - Compare strings without line ends

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.