tdf#98913 - Compare strings without line ends

Autocomplete displays multi-line strings with \n replaced by space. To
detect an exact match, compare strings without line ends.

Change-Id: Ia645dcb8a49140bb009c8c25c704840e0653eed0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205368
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>